--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@grammyjs/conversations": "^1.1.0",
     "@grammyjs/menu": "^1.1.2",
     "dotenv": "^16.0.3",
-    "grammy": "^1.12.1",
-    "openai": "^3.1.0"
+    "grammy": "^1.12.1"
   }
 }
